SERVER-34545 Handle empty RDNs in Certificate subject names